--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-      {{title}}
-    </title>
+    <title>{{ title }}</title>
     {% if description %}
-      <meta name="description" content="{{description}}"/>
+      <meta name="description" content="{{ description }}"/>
     {% endif %}
     {% block head %}{% endblock %}
     <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
@@ -18,18 +16,11 @@
   </head>
   <body>
     {% include "./partials/navbar.html" %}
-
-    {{ content | safe }}
+    
+    {{ content | safe }} <!-- The product content will be injected here -->
 
     {% include "./partials/footer.html" %}
 
     <script src="/static/js/alpine.js"></script>
-
-    {% if path == "home" %}
-      <!-- Netlify Identity Widget -->
-      <!-- Needed only if you are using Netlify Identity feature -->
-      <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    {% endif %}
-
   </body>
 </html>
