--- a/src/_includes/products.html
+++ b/src/_includes/products.html
@@ -12,6 +12,6 @@ layout: default
         <img src="{{ image }}" alt="{{ title }}" class="w-full max-w-md mx-auto">
     </div>
     <article class="prose lg:prose-xl my-4 mx-auto">
-        {{ content | safe }} <!-- This renders the body content from the Markdown file -->
+        {{ content | safe }} <!-- This will render the product body content -->
     </article>
 </div>
